--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://maheshwari-ashutosh.github.io/Resume_",
+  "homepage": "https://maheshwari-ashutosh.github.io/_Resume",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@testing-library/jest-dom": "^5.14.1",
